samples/_failures_safe/1761374719_ae4ea7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4232819.c: In function ‘main’:
./samples/SAFE/__tmp_b4232819.c:134:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  134 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_b4232819.c:134:5: error: expected declaration or statement at end of input
